# SqlPlanForDummies

./: .env  .gitignore  AGENTS.md  LICENSE  README.md  USAGE.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
assets/: Icon.xcf
public/examples/: company.sqlplan
scripts/: submit-to-winget.ps1  update-winget-manifests.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  connection.rs  encryption.rs  mod.rs  store.rs  types.rs
src-tauri/src/xel/: commands.rs  filter.rs  mod.rs  parser.rs  store.rs  types.rs
src/components/: AnalysisPanel.test.ts  AnalysisPanel.vue  ArtifactTerminal.vue  CollapsiblePanel.vue  ConnectionManager.vue  DiagnosticConsole.vue  ExecutionPlanGraph.vue  IntelligenceHub.vue  NodeDetails.test.ts  NodeDetails.vue  OutputPanel.vue  PlanComparison.vue  PlanLoader.vue  QueryHistory.vue  ResultTable.vue  SqlEditor.vue  SqlViewer.vue  WaveformRenderer.vue
src/composables/: deadlockSummary.ts  planState.test.ts  planState.ts  sqlPlanParser.test.ts  sqlPlanParser.ts  tauriApi.ts  useDbConnection.ts  useQueryExecution.ts  useQueryHistory.test.ts  useQueryHistory.ts  useResizePanel.ts  useSqlEditorState.ts  useXelState.ts  xelTauriApi.ts
winget/: PsyChonek.SqlPlanForDummies.installer.yaml  PsyChonek.SqlPlanForDummies.locale.en-US.yaml  PsyChonek.SqlPlanForDummies.yaml  SqlPlanForDummies.installer.yaml  SqlPlanForDummies.locale.en-US.yaml  SqlPlanForDummies.yaml  WINGET_MIGRATION_PLAN.md
(+15 files in other folders)
